# pySciBench

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
source/: __init__.py
source/gui/: dockable_console.py  embedded_console.py  plot_window.py  pyQNEP.ui
source/py_sci_bench/: __main__.py
src/daq/: pyDAQBase.py
src/gui/: dockable_console.py  plot_window.py
src/py_sci_bench/: cli.py
tests/: tespyqtgraph.py  test_psbench_basic.py  testmatplotlib.py
