[metadata]
name = py-sci-bench
version = attr: py_sci_bench.__version__
description = Real-time data acquisition and visualization for lab scientists
long_description = file: README.md
long_description_content_type = text/markdown
author = Quan Qing
author_email = quan.qing@asu.edu
url = https://github.com/Qing-LAB/PySciBench
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 2-Clause License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib
    numpy

[options.entry_points]
console_scripts =
    psbench = py_sci_bench.cli:main
